syntax = "proto3";

package api.v1.services.helloworld;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "errors/rpcerr/rpcerr.proto";
import "google/protobuf/descriptor.proto";
import "validate/validate.proto";

option go_package = "v1/services/helloworld;helloworld";
option java_multiple_files = true;
option java_package = "com.origadmin.api.v1.services.helloworld";
option java_outer_classname = "APIV1ServicesHelloworldProto";

extend google.protobuf.MessageOptions {
  optional GreeterData data = 1000;
}

// The greeting service definition.
service Greeter {
  // SayHello is a get method
  rpc SayHello (GreeterRequest) returns (GreeterReply) {
    option (google.api.http) = {
      get: "/api/v1/greeter/{id}/hello",
    };
  }
  // PostHello is a post method
  rpc PostHello (GreeterRequest) returns (GreeterReply) {
    option (google.api.http) = {
      post: "/api/v1/greeter/{id}/hello",
      body: "data",
      response_body: "data",
    };
  }
  // CreateGreeter creates a new Greeter
  rpc CreateGreeter (CreateGreeterRequest) returns (CreateGreeterReply){
    option (google.api.http) = {
      post: "/api/v1/greeter",
      body: "data",
    };
  }
  // UpdateGreeter updates a Greeter
  rpc UpdateGreeter (UpdateGreeterRequest) returns (UpdateGreeterReply){
    option (google.api.http) = {
      put: "/api/v1/greeter/{id}",
      body: "data",
    };
  }
  // DeleteGreeter deletes a Greeter
  rpc DeleteGreeter (DeleteGreeterRequest) returns (DeleteGreeterReply){
    option (google.api.http) = {
      delete: "/api/v1/greeter/{id}",
    };
  }
  // GetGreeter gets a Greeter
  rpc GetGreeter (GetGreeterRequest) returns (GetGreeterReply){
    option (google.api.http) = {
      get: "/api/v1/greeter/{id}",
    };
  }
  // ListGreeter lists Greeters
  rpc ListGreeter (ListGreeterRequest) returns (ListGreeterReply){
    option (google.api.http) = {
      get: "/api/v1/greeter",
    };
  }
}

message GreeterData {
  string id = 1;
  string name = 2;
}

// The request message containing the user's name.
message GreeterRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
  string name = 2;
  GreeterData data = 3;
}

// The response message containing the greetings
message GreeterReply {
  GreeterData data = 1;
}


message CreateGreeterRequest {
  GreeterData data = 1;
}
message CreateGreeterReply {}

message UpdateGreeterRequest {
  string id = 1;
  GreeterData data = 3;
}
message UpdateGreeterReply {
  bool success = 1;
  repeated GreeterData data = 3;
}

message DeleteGreeterRequest {
  string id = 1;
}
message DeleteGreeterReply {}

message GetGreeterRequest {
  string id = 1;
}
message GetGreeterReply {}

message ListGreeterRequest {
  // Current page
  optional int32 current = 1;

  // The number of lines per page
  optional int32 page_size = 2;

  // Whether not paging
  optional bool no_paging = 5;
}
message ListGreeterReply {
  bool success = 1;
  int32 total = 2;
  repeated GreeterData data = 3;
  optional errors.rpcerr.Error error = 4;
  optional google.protobuf.Any extra = 5;

}