syntax = "proto3";
package origadmin.configs.api;

import "buf/validate/validate.proto";
import "config/v1/cors.proto";
import "config/v1/data.proto";
import "config/v1/logger.proto";
import "config/v1/metrics.proto";
import "config/v1/registry.proto";
import "config/v1/security.proto";
import "config/v1/service.proto";
import "google/protobuf/duration.proto";

option go_package = "internal/configs;configs";

message EntrySelectorConfig {
  bool global = 2 [json_name = "global"];
  string name = 3 [json_name = "name"];
  string version = 4 [json_name = "version"];
}

message Bootstrap {
  // Entry
  message Entry {
    string name = 1 [json_name = "name"];
    string scheme = 2 [json_name = "scheme", (buf.validate.field).string = {in: ["http", "grpc"]}];
    string addr = 3 [json_name = "addr"];
    string network = 4 [json_name = "network"];
    string weight = 5 [json_name = "weight"];
    optional google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    bool enable_swagger = 7 [json_name = "enable_swagger"];
    bool enable_pprof = 8 [json_name = "enable_pprof"];
    EntrySelectorConfig selector = 100 [json_name = "selector"];
  }

  string mode = 1 [(buf.validate.field).string = {in: ["singleton", "cluster"]}, json_name = "mode"];
  string service_name = 2 [json_name = "service_name"];
  string crypto_type = 3 [json_name = "crypto_type"];
  string version = 4 [json_name = "version"];

  Entry entry = 100 [json_name = "entry"];
  config.v1.RegistryConfig registry = 200 [json_name = "registry"];
  config.v1.DataConfig data = 300 [json_name = "data"];
  Settings settings = 400 [json_name = "settings"];
  config.v1.ServiceConfig service = 500 [json_name = "service"];
  Middlewares middlewares = 600 [json_name = "middlewares"];
  string id = 99 ;
}

message Middlewares {
  bool register_as_global = 1 [json_name = "register_as_global"];
  config.v1.LoggerConfig logger = 2 [json_name = "logger"];
  config.v1.CorsConfig cors = 3 [json_name = "cors"];
  config.v1.MetricConfig metrics = 4 [json_name = "metrics"];
  config.v1.SecurityConfig security = 5 [json_name = "security"];
}


message Settings {
  string crypto_type = 1 [json_name = "crypto_type"];
}
